use java api instead of guava